--- a/task2/Task_2 - Finding optimum clusters in iris dataset.ipynb
+++ b/task2/Task_2 - Finding optimum clusters in iris dataset.ipynb
@@ -128,6 +128,7 @@
     }
    ],
    "source": [
+    "#now we print the head of the dataframe\n",
     "df.head()"
    ]
   },
@@ -137,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from the above table we observe that the 'Id' column is not required so we d\n",
+    "#from the above table we observe that the 'Id' column is not required so we drop it\n",
     "df = df.drop(['Id'],axis=1)"
    ]
   },
@@ -452,6 +453,7 @@
     "#now applying the elbow method to find the optimum number of clusters\n",
     "from sklearn.cluster import KMeans\n",
     "Within_Cluster_Sum_of_Squares = []\n",
+    "#we run a loop from 1 to 10 where i represents the number of clusters\n",
     "for i in range(1,11):\n",
     "    #‘k-means++’: selects initial cluster centers for k-mean clustering in a smart way to speed up convergence\n",
     "    #'max_iter ': Maximum number of iterations of the k-means algorithm for a single run\n",
@@ -479,7 +481,7 @@
     }
    ],
    "source": [
-    "#now we will plot the results so that we can observe the elbow\n",
+    "#now we will plot wcss vs number of clusters\n",
     "plt.plot(range(1, 11), Within_Cluster_Sum_of_Squares)\n",
     "plt.title('Elbow method')\n",
     "plt.xlabel('Number of clusters')\n",
