--- a/task2/Task_2 - Finding optimum clusters in iris dataset.ipynb
+++ b/task2/Task_2 - Finding optimum clusters in iris dataset.ipynb
@@ -555,6 +555,7 @@
     }
    ],
    "source": [
+    "#these are x coordinates of the centriods\n",
     "kmeans.cluster_centers_[:, 0]"
    ]
   },
@@ -575,6 +576,7 @@
     }
    ],
    "source": [
+    "#these are y coordinates of the centriods\n",
     "kmeans.cluster_centers_[:,1]"
    ]
   },
